# braneOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: AI_SUBSYSTEM.md  ARCHITECTURE.md  PROJECT_MASTER_SPEC.md  ROADMAP.md  SECURITY_MODEL.md  TEST_PLAN.md
docs/ADR/: ADR-001-initial-architecture.md
kernel/: Cargo.toml
kernel/src/: ai.rs  audit.rs  brane.rs  brane_discovery.rs  brane_session.rs  context.rs  crypto.rs  dns.rs  fat32.rs  framebuffer.rs  gdt.rs  idt.rs  ipc.rs  keyboard.rs  lib.rs  main.rs  module_loader.rs  net.rs  pic.rs  process.rs  ramfs.rs  sched.rs  security.rs  serial.rs  shell.rs  socket.rs  syscall.rs  tests.rs  tty.rs  vfs.rs  virtio.rs
kernel/src/memory/: frame_allocator.rs  heap.rs  mod.rs  paging.rs
runner/: Cargo.toml
runner/src/: main.rs
tools/qemu_runner/: run.sh
