[package]
name = "brane_os_kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Brane OS — Hybrid modular kernel"

[dependencies]
# CPU intrinsics, port I/O, paging structures
x86_64 = "0.15"
# Serial port driver (UART 16550)
uart_16550 = "0.3"
# Spinlock (no_std compatible)
spin = "0.9"
# Linked-list allocator for heap
linked_list_allocator = "0.10"
# 8259 PIC (Programmable Interrupt Controller)
pic8259 = "0.11"
# PS/2 keyboard decoder
pc-keyboard = "0.7"
# Bootloader API — entry point macro and boot info structures
bootloader_api = "0.11"

